Link to additional credits and remove extra lang attribute

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <li>Trever Berryman: Game Design / Narrative Design</li>
           </ul>
         </p>
+        <p>
+          <a href="https://github.com/ggj-heart/ggj-heart#credits">Additional credits</a>
+        </p>
       </section>
       <footer class="container">
         <p>
@@ -42,4 +45,4 @@
       </footer>
     </main>
   </body>
-</html lang="en-us">
+</html>
