Fix a mobile rendering issue

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </header>
       <section class="container">
         <p>
-          <img src="./images/cara-game-640.png" alt="Cara" width="640" height="360" />
+          <img src="./images/cara-game-640.png" alt="Cara" width="640" height="360" style="object-fit: scale-down;" />
         </p>
         <p>
           Cara is a game about a girl with a broken heart, and in order to become whole again, she must confront her inner demons and push herself to make her life better. It is a game that involves both narrative and platforming elements.
