Add note re keyboard and lack of mobile support

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         </p>
         <p>
           <a href="./play-cara" class="button">Play Cara</a>
+          <br />
+          Note: Keyboard required. Doesn't currently work on mobile.
         </p>
         <p>
           Created for Global Game Jam 2020 by:
