Update WebGL build with touch support

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p>
           <a href="./play-cara" class="button">Play Cara</a>
           <br />
-          Note: Keyboard or controller required. Doesn't currently work on mobile.
+          Update: Now with experimental support for mobile.
         </p>
         <p>
           Created for Global Game Jam 2020 by:
