Add additional credits to home page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           Update: Now with experimental support for mobile.
         </p>
         <p>
-          Created for Global Game Jam 2020 by:
+          <h2>Created for Global Game Jam 2020 by:</h2>
           <ul>
             <li>Casey Chen: Narrative and Game Designer</li>
             <li>Christian Albiar: Composer / SFX</li>
@@ -36,7 +36,33 @@
           </ul>
         </p>
         <p>
-          <a href="https://github.com/ggj-heart/ggj-heart#credits">Additional credits</a>
+          <h2>Additional Credits:</h2>
+          <h3>Assets Used:</h3>
+          <ul>
+            <li>Action Pack City and Adventure Pack - GRASSLAND tile sets by Anokolisa - <a href="https://anokolisa.itch.io/">anokolisa.itch.io</a></li>
+            <li>Jumping sound effect by Leszek_Szary - <a href="https://freesound.org/people/Leszek_Szary/sounds/146726/">freesound.org/people/Leszek_Szary/sounds/146726/</a></li>
+            <li>Player control script adapted from "2D Player Movement and Jumping in Unity" by Kyle Suchar - <a href="https://www.youtube.com/watch?v=L6Q6VHueWnU">youtube.com/watch?v=L6Q6VHueWnU</a></li>
+          </ul>
+
+          <h3>Tools Used:</h3>
+          <ul>
+            <li>Clip Studio Paint</li>
+            <li>Gimp</li>
+            <li>Unity (2019.3)</li>
+            <li>VS Code</li>
+            <li>Discord</li>
+            <li>GitHub</li>
+            <li>Google Drive</li>
+            <li>Trello</li>
+          </ul>
+
+          <h3>Special Thanks:</h3>
+          <ul>
+            <li>Global Game Jam</li>
+            <li>Lab 7 for hosting the space</li>
+            <li>Sacramento Developer Collective and all the volunteers</li>
+            <li>numerous articles, videos, documents, tutorials, and Q&amp;A sites/forums</li>
+          </ul>
         </p>
       </section>
       <footer class="container">
